[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Pawns/Pawn_16/Parts/Pawn_16_Head.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Pawns/Pawn_16/Parts/Pawn_16_Body.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Pawns/Pawn_16.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Pawns/Pawn_16/Parts/Pawn_16_Part_Arm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Pawns/Parts/Attachment_Point.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Pawns/Parts/Timers.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 34.9999
height = 46.0002

[sub_resource type="CapsuleShape2D" id=4]
radius = 9.0
height = 46.0

[sub_resource type="Animation" id=5]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -23 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -34 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1

[sub_resource type="Animation" id=8]
length = 0.1

[sub_resource type="Animation" id=9]
length = 0.5
step = 0.05

[sub_resource type="Animation" id=10]
length = 0.1

[sub_resource type="Animation" id=11]
length = 0.1

[sub_resource type="Animation" id=12]
length = 0.5
step = 0.05

[node name="Pawn_16" type="KinematicBody2D" groups=[
"hittable",
"ladder",
"player",
]]
collision_layer = 2
collision_mask = 67230
script = ExtResource( 3 )

[node name="Timers" parent="." instance=ExtResource( 6 )]

[node name="Raycasts" type="Node2D" parent="."]

[node name="Up" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -47 )
enabled = true
cast_to = Vector2( 0, -10 )
collision_mask = 2058

[node name="Down_L" type="RayCast2D" parent="Raycasts"]
position = Vector2( -6, -2 )
enabled = true
cast_to = Vector2( -6, 6 )
collision_mask = 3102

[node name="Down_C" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 3102

[node name="Down_R" type="RayCast2D" parent="Raycasts"]
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( 6, 6 )
collision_mask = 3102

[node name="Plat_Test" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="CollisionShape2D-Stand" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="CollisionShape2D-Down" type="CollisionShape2D" parent="."]
position = Vector2( 0, -19 )
shape = SubResource( 2 )

[node name="Pawn_16_Head" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -34 )

[node name="Pawn_16_Part_Arm" parent="Pawn_16_Head" instance=ExtResource( 4 )]

[node name="Attachment_Point" parent="Pawn_16_Head" instance=ExtResource( 5 )]
z_index = 1

[node name="Pawn_16_Body" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -16 )

[node name="Pick_Up_Area" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 786432

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Up_Area"]
position = Vector2( 0, -24 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Ladder_Area" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D-R" type="CollisionShape2D" parent="Ladder_Area"]
position = Vector2( 9, -21 )
shape = SubResource( 4 )

[node name="CollisionShape2D-L" type="CollisionShape2D" parent="Ladder_Area"]
position = Vector2( -9, -21 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Left = SubResource( 7 )
anims/Left_Prone = SubResource( 8 )
anims/Left_Stun = SubResource( 9 )
anims/Right = SubResource( 10 )
anims/Right_Prone = SubResource( 11 )
anims/Right_Stun = SubResource( 12 )

[connection signal="body_entered" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_entered"]
[connection signal="body_exited" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_exited"]
[connection signal="body_entered" from="Ladder_Area" to="." method="_on_Ladder_Area_body_entered"]
[connection signal="body_exited" from="Ladder_Area" to="." method="_on_Ladder_Area_body_exited"]
